--- a/Css-Project.html
+++ b/Css-Project.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
    <title>Css Project</title>
+   
+   <style>
+      
+   </style>
+   
    <body>
-    <h1>🌤a</h1>
+    <h1>🌤</h1>
    </body>
 </html>
