added the page text

--- a/Css-Project.html
+++ b/Css-Project.html
@@ -8,5 +8,22 @@
    
    <body>
     <h1>🌤</h1>
+    <h1>Currently 21° in Tokyo</h1>
+    <h2>13°/<strong>23°</strong></h2>
+    <br>
+    <br>
+    <br>
+    <h3>🌧Tomorrow</h3>
+    <p>10° / <strong>22°</strong></p>
+    <br>
+    <br>
+    <br>
+    <h3>🌥 Saturday</h3>
+    <p>15° / <strong>17°</strong></p>
+    <br>
+    <br>
+    <br>
+    <h3>☀️ Sunday</h3>
+    <p>25° / <strong>28°</strong></p>
    </body>
 </html>
