--- a/Css-Project.html
+++ b/Css-Project.html
@@ -3,7 +3,12 @@
    <title>Css Project</title>
    
    <style>
-      
+      h1 {
+         color: #1a64d6;
+         font-size: 34px;
+         text-align: center;
+         font-family: Helvetica, Arial, sans-serif;
+      } 
    </style>
    
    <body>
