--- a/Css-Project.html
+++ b/Css-Project.html
@@ -9,6 +9,19 @@
          text-align: center;
          font-family: Helvetica, Arial, sans-serif;
       } 
+      h2 {
+         font-size: 34px;
+         text-align: center;
+         font-family: Helvetica, Arial, sans-serif;
+      }
+      h3 {
+         text-align: center;
+         font-family: Helvetica, Arial, sans-serif;
+      }
+      p {
+         text-align: center;
+         font-family: Helvetica, Arial, sans-serif;
+      }
    </style>
    
    <body>
