tried to fix h2

--- a/Css-Project.html
+++ b/Css-Project.html
@@ -19,17 +19,17 @@
          font-family: Helvetica, Arial, sans-serif;
       }
       p {
+         font-size: 20px;
+         color: #7f7e7e;
          text-align: center;
-         font-family: Helvetica, Arial, sans-serif;
+         font-family: monospace;
       }
    </style>
    
    <body>
     <h1>🌤</h1>
     <h1>Currently 21° in Tokyo</h1>
-    <h2>13°/<strong>23°</strong></h2>
-    <br>
-    <br>
+    <h2>13°/23°</h2>
     <br>
     <h3>🌧Tomorrow</h3>
     <p>10° / <strong>22°</strong></p>
