--- a/Index.html
+++ b/Index.html
@@ -5,40 +5,40 @@
    <style>
       h1 {
          color: #1a64d6;
-         font-size: 34px;
+         font-size: 33px;
          text-align: center;
-         font-family: Helvetica, Arial, sans-serif;
+         font-family: Arial, Helvetica, sans-serif;
       } 
       h2 {
          font-size: 34px;
          text-align: center;
-         font-family: Helvetica, Arial, sans-serif;
+         font-family: Arial, Helvetica, sans-serif;
+         font-weight: 400;
       }
       h3 {
          text-align: center;
-         font-family: Helvetica, Arial, sans-serif;
+         font-family: Arial, Helvetica, sans-serif;
       }
       p {
-         font-size: 20px;
-         color: #7f7e7e;
+         font-size: 18px;
+         opacity: 0.8;
          text-align: center;
          font-family: monospace;
+         
       }
+
    </style>
    
    <body>
     <h1>🌤</h1>
     <h1>Currently 21° in Tokyo</h1>
-    <h2>13°/23°</h2>
-    <br>
+    <h2>13° / <strong>23°</strong></h2>
     <h3>🌧Tomorrow</h3>
     <p>10° / <strong>22°</strong></p>
     <br>
     <br>
-    <br>
     <h3>🌥 Saturday</h3>
     <p>15° / <strong>17°</strong></p>
-    <br>
     <br>
     <br>
     <h3>☀️ Sunday</h3>
